# agent-smith

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  create-access-token.sh  pyproject.toml
.github/workflows/: publish.yml
hooks/: settings.example.json
scripts/: manual_test.sh
src/agent_smith/: __init__.py  install.py  main.py
tests/: test_install.py  test_main.py
